配置文件写错了healthBo的路径,导致查询healthBo的值为空,已修正

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -23,7 +23,7 @@ collection:
   - 
     type: 1
     collectionName: health
-    class: com.lad.admin.infor.dao.HealthDao
+    class: com.lad.admin.infor.model.HealthBo
   - 
     type: 2
     collectionName: security
